# data-mining-class

./: pyproject.toml
data_mining_class/data_collection/: beautifulsoup_example.py  bs_mi_amikom_example.py  bs_tokopedia_example.py  openweather_api_example.py  pandas_example.py
data_mining_class/decision_tree/.ipynb_checkpoints/: decision_tree-checkpoint.ipynb
data_mining_class/k_means_clustering/: k_means_clustering.ipynb  plot_kmeans_digits.ipynb
data_mining_class/k_means_clustering/.ipynb_checkpoints/: from_scratch_k_means_clustering-checkpoint.ipynb  k_means_clustering-checkpoint.ipynb  plot_kmeans_digits-checkpoint.ipynb
data_mining_class/linear_regression/: linear_regression_single_variable.ipynb
data_mining_class/linear_regression/.ipynb_checkpoints/: linear_regression_multiple_variables_diabetes-checkpoint.ipynb  linear_regression_single_variable-checkpoint.ipynb  linear_regression_single_variable_small-checkpoint.ipynb
data_mining_class/logistic_regression/: logistic_regression_multiclass.ipynb
data_mining_class/logistic_regression/.ipynb_checkpoints/: logistic_regression-checkpoint.ipynb
