[tool.poetry]
name = "data-mining-class"
version = "0.1.0"
description = ""
authors = ["Arief Rahmansyah <ariefrahmansyah@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.25.0"
jupyterlab = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
